--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,12 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/IT_OJT/Desktop/Domingo/Programming/mysql-connector-java-5.1.36-bin.jar">
+	<classpathentry kind="lib" path="C:/Users/IT_OJT/Desktop/Abalos/Program Files/Java/Add ons/mysql-connector-java-5.1.36-bin.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/IT_OJT/Desktop/Abalos/Program Files/Java/Add ons/itextpdf-5.4.1.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
